--- a/action.yml
+++ b/action.yml
@@ -2,11 +2,36 @@ name: 'vmtest'
 description: 'Programmatically run tests in a virtualized machine'
 author: 'danobi'
 inputs: 
-  myInput:
-    description: 'Input to use'
-    default: 'world'
+  name:
+    description: 'Name for vmtest target.'
+    default: 'vmtest-action target'
+    required: false
+  image:
+    description: 'Path or URL to virtual machine image. Optional field, but one of `image` or `kernel` must be specified.'
+    default: ''
+    required: false
+  uefi:
+    description: 'Whether to use UEFI boot or not'
+    default: 'false'
+    required: false
+  kernel:
+    description: 'Path or URL to kernel. Typically named `vmlinuz` or `bzImage`. Optional field, but one of `image` and `kernel` must be specified.'
+    default: ''
+    required: false
+  kernel_args:
+    description: 'Additional kernel command line arguments to append to vmtest generated kernel arguments. `kernel` must be specified for this field to be effective.'
+    default: ''
+    required: false
+  command:
+    description: 'Command to run inside VM. The specified command must be an absolute path. Note that the specified command is not run inside a shell by default. If you want a shell, use /bin/bash -c "$SHELL_CMD_HERE".'
+    required: true
 runs:
   using: 'docker'
   image: 'Dockerfile'
   args:
-    - ${{ inputs.myInput }}
+    - ${{ inputs.name }}
+    - ${{ inputs.image }}
+    - ${{ inputs.uefi }}
+    - ${{ inputs.kernel }}
+    - ${{ inputs.kernel_args }}
+    - ${{ inputs.command }}
