--- a/action.yml
+++ b/action.yml
@@ -26,12 +26,5 @@ inputs:
     description: 'Command to run inside VM. The specified command must be an absolute path. Note that the specified command is not run inside a shell by default. If you want a shell, use /bin/bash -c "$SHELL_CMD_HERE".'
     required: true
 runs:
-  using: 'docker'
-  image: 'Dockerfile'
-  args:
-    - ${{ inputs.name }}
-    - ${{ inputs.image }}
-    - ${{ inputs.uefi }}
-    - ${{ inputs.kernel }}
-    - ${{ inputs.kernel_args }}
-    - ${{ inputs.command }}
+  using: 'node16'
+  main: 'index.js'
