--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,9 +1,10 @@
 {
     "env": {
-        "browser": true,
-        "es2021": true
+        "node": true,
+        "es2021": true,
+        "jest": true
     },
-    "extends": "google",
+    "extends": "eslint:recommended",
     "overrides": [
     ],
     "parserOptions": {
