--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "eslint": "^8.40.0",
     "eslint-config-google": "^0.14.0",
     "jest": "^29.5.0",
-    "js-beautify": "^1.14.7"
+    "js-beautify": "^1.14.7",
+    "tmp": "^0.2.1"
   },
   "dependencies": {
     "@actions/core": "^1.10.0",
