Change action name
Action name cannot be an existing github username. And unfortunately
github.com/vmtest is being squatted on.

--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,4 @@
-name: 'vmtest'
+name: 'vmtest-action'
 description: 'Programmatically run tests in a virtualized machine'
 author: 'danobi'
 inputs: 
