--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "@actions/core": "^1.10.0",
     "@actions/exec": "^1.1.1",
     "@actions/github": "^5.1.1",
-    "@actions/tool-cache": "^2.0.1",
-    "which": "^3.0.1"
+    "@actions/tool-cache": "^2.0.1"
   }
 }
